--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 	</parent>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<!-- <java.version>1.8</java.version> -->
 		<vaadin.version>14.4.2</vaadin.version>
 	</properties>
 
@@ -77,6 +77,19 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<!--设置编译版本为1.8 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<!-- 設置詳細信息。 -->
+				<configuration>
+					<!-- 設置jdk版本 -->
+					<source>1.8</source>
+					<target>1.8</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
